src/index.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    html {
        overflow-x: hidden
    }

    img {
        user-select: none;
    }

    h1 {
        font-weight: bold;
    }
}

::-webkit-scrollbar {
    @apply w-1 h-2
}

::-webkit-scrollbar-thumb {
    @apply bg-orange-darker
}

#male-checkbox:checked ~ .check-1{
    @apply text-opacity-100;

    animation: check-anime 0.4s 1;
}

#female-checkbox:checked~.check-1 {
    @apply text-opacity-100;
    
    animation: check-anime 0.4s 1;
}

@keyframes check-anime {
    0%, 100%{
        @apply transform scale-100;
    }
    50%{
        @apply transform scale-150 text-opacity-0;
    }
}

